2022-11-29  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (hist_series): make check for
        "special" currencies, such as "USDUSD Curncy",
        more stringent

2021-11-25  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (hist_series): add arguments
        "options" and "overrides", passed to Rblpapi::bdh

2019-12-11  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (hist_id,hist_ticker): rename function
        hist_id => hist_ticker
        (hist_ticker): the function now checks whether
        the ticker has been reassigned, or the ticker
        has simply changed

2019-04-29  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (vwap): add function

2019-03-28  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (revenue_breakdown): set period to -1
        (hist_id, index_weights, revenue_breakdown): autoconnect

2019-03-26  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (revenue_breakdown): add function

2019-02-05  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (index_weights): add function

2018-12-17  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (hist_id): add function