@@ -2,7 +2,7 @@ Package: Rblpapi.utils
 Type: Package
 Title: Utilities that Build on the Rblpapi Package
 Version: 0.0-2
-Date: 2022-11-29
+Date: 2023-02-24
 Maintainer: Enrico Schumann <es@enricoschumann.net>
 Authors@R: person(given = "Enrico", family = "Schumann",
                   role  = c("aut", "cre"),
